[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/player.png" type="Texture" id=1]
[ext_resource path="res://src/Levels/Weapon.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/shadow.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.20887, 8.32273 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.466667
loop = true
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.583333
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 46.1853

[node name="Player" type="Node2D"]
script = ExtResource( 3 )
_speed = 100.0
health = 1
is_bound_to_screen = true

[node name="Weapon" parent="." instance=ExtResource( 2 )]
position = Vector2( 2.39704, 2.59393 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.0992127 )
rotation = -0.00325796
scale = Vector2( 0.988748, 1 )
texture = ExtResource( 1 )
hframes = 9

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0.727036, 7.66216 )
z_index = -1
texture = ExtResource( 4 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"Player",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="CollectionBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionBox"]
shape = SubResource( 4 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="area_entered" from="CollectionBox" to="." method="_on_CollectionBox_area_entered"]
[connection signal="area_exited" from="CollectionBox" to="." method="_on_CollectionBox_area_exited"]
